--- a/src/scss/blocks/_hero.scss
+++ b/src/scss/blocks/_hero.scss
@@ -9,8 +9,22 @@
 
     &__main {
         display: flex;
-        align-items: center;
+        align-items: end;
+        justify-content: space-between;
         column-gap: 24px;
+
+        @include media.custom-media(920px) {
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            max-width: 600px;
+            margin-inline: auto;
+
+            .countdown {
+                order: 2;
+            }
+        }
     }
 
     &__banner {
@@ -24,12 +38,30 @@
         padding: 80px 120px 50px;
         position: relative;
 
+        @include media.custom-media(920px) {
+            margin-top: 20px;
+        }
+
+        @include media.media(tablet) {
+            padding: 30px 50px;
+            border-radius: 20px;
+        }
+
+        @include media.media(mobile) {
+            padding-inline: 20px;
+            border-radius: 15px;
+        }
+
+        @include media.custom-media(375px) {
+            padding-inline: 10px;
+        }
+
         &::after {
             content: "";
             display: block;
             position: absolute;
             top: 20%;
-            left: -20px;
+            left: 3%;
             width: 78px;
             height: 144px;
             rotate: 30deg;
@@ -44,9 +76,9 @@
         }
 
         &-description {
+            @include m.fluid-text(14, 20);
             text-align: center;
             line-height: 1.4;
-            font-size: 20px;
 
             span {
                 font-weight: 700;
@@ -62,10 +94,15 @@
         max-width: 600px;
         position: relative;
         row-gap: 40px;
+        margin-bottom: 30px;
 
-        
+
         @include media.custom-media(1180px) {
             max-width: 500px;
+        }
+
+        @include media.custom-media(920px) {
+            display: contents;
         }
     }
 
@@ -76,22 +113,64 @@
         span {
             color: var(--color-primary-text);
         }
+
+        @include media.custom-media(920px) {
+            text-align: center;
+        }
+
+        @include media.custom-media(545px) {
+            font-size: 56px;
+        }
+
+        @include media.custom-media(490px) {
+            font-size: 50px;
+        }
+
+        @include media.custom-media(440px) {
+            font-size: 44px;
+        }
     }
 
     &__description {
         @include m.fluid-text(18, 16);
 
         color: #000000;
+
+        @include media.custom-media(920px) {
+            margin-top: 25px;
+            text-align: center;
+        }
     }
 
     &__actions {
         display: flex;
         align-items: start;
         column-gap: 12px;
+        position: relative;
+
+        @include media.custom-media(920px) {
+            margin-top: 25px;
+        }
+
+        @include media.custom-media(545px) {
+            flex-direction: column;
+            row-gap: 15px;
+            width: 100%;
+            max-width: 400px;
+
+            .button {
+                width: 100%;
+            }
+        }
     }
 
     &__image {
         position: relative;
+
+        @include media.custom-media(920px) {
+            order: 1;
+            margin-top: 35px;
+        }
 
         &-decoration {
             position: absolute;
