--- a/src/scss/blocks/_competition.scss
+++ b/src/scss/blocks/_competition.scss
@@ -1,4 +1,5 @@
 @use "../base/mixins" as m;
+@use "../utils/media" as media;
 
 .competition {
 
@@ -12,7 +13,7 @@
     }
 
     &__title {
-        @include m.fluid-text(46, 64);
+        @include m.fluid-text(24, 64);
 
         color: var(--color-primary);
         font-family: var(--font-family-heading);
@@ -21,7 +22,16 @@
     }
 
     &__body {
-        column-gap: 20px;
+        gap: 20px;
+        justify-content: center;
+
+        @include media.custom-media(920px) {
+            --gridColumns: 2;
+        }
+
+        @include media.custom-media(650px) {
+            --gridColumns: 1;
+        }
     }
 
     &-card {
@@ -35,20 +45,110 @@
         border-radius: 15px;
         position: relative;
 
+        &::after {
+            content: "";
+            display: block;
+            position: absolute;
+            width: 68px;
+            height: 134px;
+        }
+
         &:nth-of-type(3) {
             &::after {
-                content: "";
-                display: block;
-                position: absolute;
-                top: -40px;
-                right: -10px;
+                top: -5%;
+                right: -5%;
                 transform: rotate(-30deg);
-                width: 78px;
-                height: 144px;
+
+
                 background: {
                     image: url("/public/images/deco-ketchup-pepper.png");
                     size: cover;
                     repeat: no-repeat;
+                }
+            }
+        }
+
+        @include media.custom-media(920px) {
+            &:nth-of-type(3) {
+                grid-column: span 2;
+                max-width: 600px;
+                margin-inline: auto;
+
+                &::after {
+                    width: 47px;
+                    height: 89px;
+                }
+            }
+
+            &:nth-of-type(1) {
+                &::after {
+                    top: -5%;
+                    left: 5%;
+                    transform: rotate(-30deg);
+
+
+                    background: {
+                        image: url("/public/images/deco-ketchup-tomato.png");
+                        size: cover;
+                        repeat: no-repeat;
+                    }
+                }
+            }
+
+            &:nth-of-type(2) {
+                &::after {
+                    top: -5%;
+                    right: 5%;
+                    transform: rotate(30deg);
+
+
+                    background: {
+                        image: url("/public/images/deco-ketchup-khebab.png");
+                        size: cover;
+                        repeat: no-repeat;
+                    }
+                }
+            }
+        }
+
+        @include media.custom-media(650px) {
+            max-width: 400px;
+
+            &::after {
+                width: 47px;
+                height: 89px;
+                transform: rotate(-15deg);
+            }
+
+            &:nth-of-type(3) {
+                grid-column: auto;
+                margin-inline: 0;
+
+                &::after {
+                    left: -5%;
+                }
+            }
+        }
+
+        @include media.custom-media(500px) {
+            &:nth-of-type(1) {
+                &::after {
+                    left: 5px;
+                    top: 5px;
+                }
+            }
+
+            &:nth-of-type(2) {
+                &::after {
+                    right: 5px;
+                    top: 5px;
+                }
+            }
+
+            &:nth-of-type(3) {
+                &::after {
+                    left: 5px;
+                    top: 5px;
                 }
             }
         }
@@ -78,7 +178,7 @@
         }
 
         &__description {
-            @include m.fluid-text(18,20);
+            @include m.fluid-text(18, 20);
 
             color: #000;
         }
@@ -88,6 +188,18 @@
         display: flex;
         align-items: center;
         column-gap: 32px;
+
+        @include media.custom-media(600px) {
+            flex-direction: column;
+            row-gap: 16px;
+            max-width: 400px;
+            width: 100%;
+            position: relative;
+
+            .button {
+                width: 100%;
+            }
+        }
     }
 
 }
