--- a/src/scss/utils/_utils.scss
+++ b/src/scss/utils/_utils.scss
@@ -6,6 +6,7 @@
     padding-inline: var(--container-padding-x);
     margin-inline: auto;
     position: relative;
+    overflow: hidden;
 }
 
 .link {
