feat: добавил секцию products

--- a/src/scss/blocks/_competition.scss
+++ b/src/scss/blocks/_competition.scss
@@ -9,7 +9,7 @@
         align-items: center;
         text-align: center;
         row-gap: 32px;
-        overflow: visible;
+        overflow: hidden;
     }
 
     &__title {
