adapt(products): секция Products теперь адаптивна

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -17,6 +17,7 @@
 @use "./components/hamburger-menu";
 @use "./components/countdown";
 @use "./components/count-circle";
+@use "./components/slide";
 
 // Layouts
 @use "./layouts/header";
