--- a/src/scss/blocks/_recipes.scss
+++ b/src/scss/blocks/_recipes.scss
@@ -1,4 +1,5 @@
 @use "../base/mixins" as m;
+@use "../utils/media" as media;
 
 .recipes {
     position: relative;
@@ -14,11 +15,20 @@
         width: 70px;
         height: 140px;
         transform: rotate(30deg);
+
         background: {
             image: url("/public/images/product-image-4.png");
             repeat: no-repeat;
             size: cover;
             position: center;
+        }
+    }
+
+    @include media.custom-media(425px) {
+        padding-block: 40px;
+
+        &::after {
+            display: none;
         }
     }
 
@@ -37,17 +47,50 @@
         text-align: center;
         color: var(--color-light);
         padding-inline: 80px;
+
+        @include media.media(laptop) {
+            padding-inline: 50px;
+        }
+
+        @include media.media(tablet) {
+            padding-inline: 25px;
+        }
+
+        @include media.custom-media(500px) {
+            padding-inline: 0;
+        }
     }
 
     &__body {
         width: 100%;
         column-gap: 30px;
         row-gap: 50px;
+
+        @include media.media(laptop) {
+            --gridColumns: 3;
+
+            column-gap: 25px;
+            row-gap: 40px;
+        }
+
+        @include media.custom-media(650px) {
+            --gridColumns: 2;
+
+            column-gap: 20px;
+            row-gap: 30px;
+        }
+
+        @include media.custom-media(425px) {
+            --gridColumns: 1;
+
+            row-gap: 20px;
+        }
     }
 
     &-card {
         display: flex;
         flex-direction: column;
+        align-items: center;
         row-gap: 15px;
         color: var(--color-light);
         transition: scale .4s ease;
@@ -57,6 +100,8 @@
         }
 
         &__image {
+            width: 100%;
+            max-width: 350px;
             border-radius: 10px;
             box-shadow: -5px -5px 9px rgba(0, 0, 0, 0.25), 5px 5px 9px rgba(0, 0, 0, 0.3);
         }
@@ -64,6 +109,14 @@
         &__description {
             padding-inline: 35px;
             text-align: center;
+
+            @include media.custom-media(1180px) {
+                padding-inline: 15px;
+            }
+
+            @include media.custom-media(880px) {
+                padding-inline: 0;
+            }
         }
     }
 }
